# HarnessQuest

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/app/: config.py  db.py  dependencies.py  main.py  migrations.py  models.py  queue.py  schemas.py  security.py
backend/app/routes/: auth.py  cases.py  dashboard.py  projects.py  responsible_owners.py  sessions.py  uploads.py
backend/app/services/: analyzer.py  bootstrap.py  claude_jsonl.py  langfuse.py  oauth.py  opencode_export.py  storage.py
backend/tests/: conftest.py  test_responsible_owners.py  test_sessions.py
docs/: README.md  ai-agent-issue-loop-research-and-mvp.md  oauth-third-party-user-management.md
examples/: langfuse-style-agent-session.json  sample-session.json
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
frontend/certs/: harnessquest.local.crt
frontend/src/: App.tsx  i18n.ts  main.tsx  styles.css
frontend/src/assets/: styles.css
frontend/src/components/: Badge.tsx  RichTextEditor.tsx  Stat.tsx
frontend/src/config/: i18n.ts
frontend/src/core/api/: client.ts
frontend/src/core/utils/: chat.ts  format.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: CasesPage.tsx  DashboardPage.tsx  SessionsPage.tsx
frontend/src/routes/: hashRoute.ts
frontend/src/types/: domain.ts
sdk/python/: pyproject.toml
sdk/python/harnessquest_sdk/: __init__.py  cli.py  client.py
sdk/python/harnessquest_sdk/converters/: __init__.py  claude.py
(+11 files in other folders)
