[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harnessquest-sdk"
version = "0.1.0"
description = "CLI and SDK for uploading AI agent sessions to HarnessQuest"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7",
]

[project.scripts]
harnessquest = "harnessquest_sdk.cli:app"

[tool.setuptools.packages.find]
where = ["."]

